# flashSparse

./: .gitignore  README.md  dataset
Baseline/: compile.sh  setup.py
Baseline/DTC-SpMM/: DTCSpMM.cpp  DTCSpMM_kernel.cu  build.sh  dataset.py  execution_time_base.txt  nohup.out  run_DTC_SpMM_h100.py  setup.py  test_spmm_shell.sh
Baseline/GESpMM/: gespmm.cpp  gespmmkernel.cu  setup.py  test.py
Baseline/GNNAdvisor/: GNNAdvisor.cpp  GNNAdvisor_kernel.cu  setup.py
Baseline/MBaseline_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Baseline/RoDe/: CMakeLists.txt  dataset
Baseline/RoDe/RoDe_SDDMM/: RoDeSddmm.cu  RoDeSddmm.h
Baseline/RoDe/cmake/modules/: FindGlog.cmake
Baseline/RoDe/eval/: CMakeLists.txt  eval_sddmm_f32_n128.cu  eval_sddmm_f32_n256.cu  eval_sddmm_f32_n32.cu  eval_spmm_f32_n128.cu  eval_spmm_f32_n256.cu  eval_spmm_f32_n32.cu
Baseline/RoDe/script/: download.sh  eval_sddmm_call_128.py  eval_sddmm_call_32.py  eval_spmm_call_128.py  eval_spmm_call_256.py  execution_time_base.txt  nohup.out  pre_graph.py  pre_graph2.py  pre_graph3.py  test_sddmm_shell.sh  test_spmm_shell.sh
Baseline/RoDe/utils/: matrix_utils.cu
Baseline/TCGNN/: TCGNN.cpp  TCGNN_kernel.cu
Baseline/TCGNN_kernel/: TCGNN.cpp  TCGNN_kernel.cu
Baseline/cuSPARSE/: setup.py  spmm_csr.cpp  spmm_csr_kernel.cu  test.py
FlashSparse/: compile.sh  setup.py
FlashSparse/Block/: example.cpp  test.py
FlashSparse/Block_gpu/: block.cpp  block_kernel.cu  test.py  test2.py
FlashSparse/FlashSparse_kernel.egg-info/: PKG-INFO  SOURCES.txt  (+1 more)
cmake/: Cuda.cmake  Dependencies.cmake
dataset/: data_filter.csv  data_filter2.csv  prepare.py
(+238 files in other folders)
